quick fix for jobPage line chart was covering header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -31,10 +31,10 @@
     transition: 0.3s ease;
     background-color: transparent;
     &:hover {
-      color: $neon-02-2-hex;
+      color: $neon-02-5-hex;
     }
     .icon {
-      font-size: 2rem;
+      font-size: 32px;
     }
   }
 }
