--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -4,7 +4,6 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
